# Termeet-bot

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  config.py  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy-dev.yml  deploy-prod.yml
bot/: broker.py  config.py  main.py  metrics.py  set_menu.py
bot/api/: __init__.py  schemas.py  termeet.py
bot/database/: __init__.py  db.py  queries.py
bot/grpc/grpc_generated/: __init__.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
bot/grpc/proto/: service.proto
bot/handlers/: during_meeting.py  feedback.py  meeting_create.py  meeting_manage.py  member_tracker.py  start.py
bot/meetings/: routers.py
bot/proto/: meeting_create.proto  service.proto
bot/scheduler/: __init__.py  jobs.py
bot/scripts/: generate_grpc.sh
bot/services/: ai.py  notifications.py
bot/src/: broker.py  config.py  main.py  metrics.py
bot/src/feedback/: api.py  handlers.py  schemas.py
bot/src/general/: set_menu.py
bot/src/general/handlers/: about.py  (+1 more)
bot/src/meetings/: api.py  handlers.py  keyboards.py  schemas.py  utils.py
bot/tests/: test_main.py
handlers/: __init__.py  user_handlers.py  webhook_handlers.py
infra/: .dockerignore  docker-compose-dev.yml  docker-compose-prod.yml
middlewares/: __init__.py  logging_middleware.py
prometheus/: prometheus.yml
prometheus_data/: prometheus.yml
services/: __init__.py  meeting_service.py
utils/: __init__.py  callbacks.py  keyboards.py
