[project]
name = "termeet-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Маклаков Даниил Павлович",email = "dpmaklakov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.29.0,<4.0.0)",
    "fastapi (>=0.137.2,<0.138.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "anthropic (>=0.111.0,<0.112.0)",
    "aio-pika (>=9.6.2,<10.0.0)",
    "grpcio (>=1.81.1,<2.0.0)",
    "grpcio-tools (>=1.81.1,<2.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "mypy-protobuf (>=5.1.0,<6.0.0)"
]

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E501"]
